deploy/oke/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ott-api
  namespace: ott
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ott-api
  template:
    metadata:
      labels:
        app: ott-api
    spec:
      serviceAccountName: ott-api
      imagePullSecrets:
        - name: ocir-pull-secret
      containers:
        - name: api
          image: yny.ocir.io/axvqyylkrvmi/ott-api:e1b9f8de0455a79df020a79bdb1ca74d664583a7
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ott-api
  namespace: ott
spec:
  selector:
    app: ott-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
