deploy/oke/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ott-web
  namespace: ott
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ott-web
  template:
    metadata:
      labels:
        app: ott-web
    spec:
      imagePullSecrets:
        - name: ocir-pull-secret
      containers:
        - name: web
          image: yny.ocir.io/axvqyylkrvmi/ott-web:e1b9f8de0455a79df020a79bdb1ca74d664583a7
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ott-web
  namespace: ott
spec:
  selector:
    app: ott-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
